--- a/bands/templates/band_modify_page_template.html
+++ b/bands/templates/band_modify_page_template.html
@@ -4,11 +4,12 @@
 {% block title %}Kapela - modify{% endblock %}
 
 {% block content %}
+    {% include "handle_form_errors.html" %}
     Pristupova prava: {{ user_has_rights }}
     {% if user_has_rights %}
         <form action="." method="post">{% csrf_token %}
             {{ form.as_p }}
-            <input type="submit" value="Odelsat">
+            <input type="submit" value="Odeslat">
         </form>
     {% else %}
         {% include "access_rights_error.html" %}
