--- a/bands/templates/base.html
+++ b/bands/templates/base.html
@@ -4,16 +4,27 @@
 
 {% block bootstrap5_content %}
     <div class="container">
-        <h1 class="mt-3">{% block title %}(no title){% endblock %}</h1>
+        <div class="row mt-3">
+            <div class="col">
+                <h1 class="mt-3">{% block title %}(no title){% endblock %}</h1>
+            </div>
+        </div>
 
-        <p>
-            <a href="">Tady bude menu...</a>
-        </p>
+        <div class="row mb-3">
+            <div class="col">
+                <a href="{% url 'bands:band-listing' %}">Kapely</a>&nbsp;&nbsp;
+                <a href="{% url 'bands:album-listing' %}">Alba</a>&nbsp;&nbsp;
+                <a href="{% url 'bands:song-listing' %}">Písně</a>&nbsp;&nbsp;
+                {% block context_menu %}{% endblock %}&nbsp;&nbsp;
+            </div>
+        </div>
 
         {% autoescape off %}{% bootstrap_messages %}{% endautoescape %}
 
         {% block content %}(no content){% endblock %}
-    {% include "user_info_paticka.html" %}
+        {% include "user_info_paticka.html" %}
+        <!-- developer info -->
+        {% include "show_screen_size_icon.html" %}
+        {% include "show_browser_window_size.html" %}
     </div>
-
 {% endblock %}
