kapely, alba, pisne

--- a/bands/templates/album_delete_page_template.html
+++ b/bands/templates/album_delete_page_template.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 {% load bootstrap5 %}
 
-{% block title %}Kapela - smazat{% endblock %}
+{% block title %}Album - smazat{% endblock %}
 
 {% block content %}
-    <h3 class="text-danger">Opravdu chces tuto kapelu smazat?</h3>
+    <h3 class="text-danger">Opravdu chces toto album smazat?</h3>
     <hr>
     <div class="row">
         <div class="col-2">
             Název:
         </div>
         <div class="col">
-            {{ kapela.name }}
+            {{ object.name }}
         </div>
     </div>
     <div class="row">
@@ -19,11 +19,11 @@
             Rok:
         </div>
         <div class="col">
-            {{ kapela.year_string }}
+            {{ object.year }}
         </div>
     </div>
     <hr>
-    <br>
+    <br><br>
 
     <form action="." method="post">{% csrf_token %}
         <input class="btn btn-danger mb-2 btn-block" type="submit" value="Smazat">
