--- a/bands/templates/album_modify_page_template.html
+++ b/bands/templates/album_modify_page_template.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap5 %}
 
-{% block title %}Kapela - modify{% endblock %}
+{% block title %}Album - upravit{% endblock %}
 
 {% block content %}
     {% include "handle_form_errors.html" %}
